2009-11-04  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (read_mounts): First get installation path from own path.
	Check if cygwin1.dll exists in same directory.  Only if not, try to
	get installation path from setup registry key.  Add ample warnings.

2009-11-04  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygpath.exe): Add -fno-threadsafe-statics to CXXFLAGS.

2009-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc: Include cygprops.h.
	(del_orphaned_reg): New option variable.
	(unique_object_name_opt): Ditto.
	(handle_reg_installation): New function.
	(print_reg_installations): Ditto.
	(del_orphaned_reg_installations): Ditto.
	(memmem): Ditto.
	(handle_unique_object_name): Ditto.
	(dump_sysinfo): Call print_reg_installations from here.
	(usage): Add usage for new options --delete-orphaned-installation-keys,
	--enable-unique-object-names, --disable-unique-object-names, and
	--show-unique-object-names.
	(longopts): Add new options --delete-orphaned-installation-keys,
	--enable-unique-object-names, --disable-unique-object-names, and
	--show-unique-object-names.
	(main): Handle new options.
	* utils.sgml (cygcheck): Change documentaion accordingly.

2009-10-28  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (pretty_id): Drop arguments.  Don't change CYGWIN
	environment variable.
	(dump_sysinfo): Don't tweak CYGWIN environment variable, just call
	pretty_id once.

2009-10-20  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Update with latest NT 6.1 versions.

2009-10-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (get_special_folder): Fetch path as WCHAR and convert
	using my_wcstombs.
	(get_user_folder): Remove.
	(do_sysfolders): Use get_special_folder instead of get_user_folder.
	Fetch system paths as WCHAR and convert using my_wcstombs.

2009-10-12  Corinna Vinschen  <corinna@vinschen.de>

	* kill.cc (main): Skip to PID loop on invalid option to handle
	negative pids there.
