@@ -264,6 +264,7 @@ ctrl_c (DWORD)
 
 extern "C" {
 unsigned long (*cygwin_internal) (int, ...);
+WCHAR cygwin_dll_path[32768];
 };
 
 static int
@@ -282,6 +283,7 @@ load_cygwin ()
       errno = ENOENT;
       return 0;
     }
+  GetModuleFileNameW (h, cygwin_dll_path, 32768);
   if (!(cygwin_internal = (DWORD (*) (int, ...)) GetProcAddress (h, "cygwin_internal")))
     {
       errno = ENOSYS;
