@@ -1,5 +1,14 @@
 2009-11-04  Corinna Vinschen  <corinna@vinschen.de>
 
+	* cygcheck.cc (cygwin_dll_path): New global variable.
+	(load_cygwin): Fetch cygwin DLL path and store in cygwin_dll_path.
+	* strace.cc: Full ditto.
+	* path.cc (read_mounts): First use the path stored in cygwin_dll_path,
+	if available.  Then fall back to fetching own path.  Add comment.
+	Drop printing warnings since they look funny in strace output.
+
+2009-11-04  Corinna Vinschen  <corinna@vinschen.de>
+
 	* path.cc (read_mounts): First get installation path from own path.
 	Check if cygwin1.dll exists in same directory.  Only if not, try to
 	get installation path from setup registry key.  Add ample warnings.
